# 2020_Stimer_za_gitaru

./: .gitlab-ci.yml  CONTRIBUTING.md  CONTRIBUTORS  README  README.md  com.gitlab.dusan-gvozdenovic.strings.json  meson.build
data/: com.gitlab.dusan-gvozdenovic.strings.appdata.xml.in  com.gitlab.dusan-gvozdenovic.strings.desktop.in  com.gitlab.dusan-gvozdenovic.strings.gresource.xml  io.gvozdenovic.strings.appdata.xml.in  io.gvozdenovic.strings.desktop.in  io.gvozdenovic.strings.gresource.xml  strings-screenshot.xcf  stylesheet.css
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  com.gitlab.dusan-gvozdenovic.strings.pot  io.gvozdenovic.strings.pot  sr.po  sr@latin.po
src/: Alsa.vala  AlsaDevice.vala  Application.vala  Audio.vala  AudioThread.vala  Complex.vala  Config.vala  DeviceListItem.vala  Gauge.vala  PrefPane.vala  ToneDisplay.vala  ToneSlider.vala  Tuning.vala
